--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,7 +75,7 @@
     <string name="subject">Subject</string>
     <string name="calendar">Calendar</string>
     <string name="join_a_meeting">Join a meeting</string>
-    <string name="join">Join</string>
+    <string name="join">Join Meeting</string>
     <string name="rejoin">Rejoin</string>
     <string name="schedule">Schedule</string>
     <string name="schedule_meeting">Schedule Meeting</string>
